Fix new game show words error and add overflow handling

--- a/main.css
+++ b/main.css
@@ -372,3 +372,7 @@ body {
 #show-words-list .found {
   font-weight: bolder;
 }
+
+#show-words-wrapper {
+  overflow: auto;
+}
